Fix quicksort Implement and use insertion sort. (Looks better in our case.) Random number utilities and misc. cleanup.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -4,7 +4,8 @@ SHELL = /bin/sh
 CXX = g++-mp-4.4
 
 #CXXFLAGS = -g -Wall
-CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops
+#CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops
+CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops -DNDEBUG
 
 LIBS = -lreadline -lcurses
 OBJECTS = board.o eval.o genmasks.o genmoves.o gentables.o main.o	\
@@ -23,4 +24,5 @@ play: chesley
 
 clean :
 	rm -rf chesley a.out *.o *.dSYM *~ TAGS *.gcda a.out Saturn*	\
-	      game.00* log.00* book.lrn position.bin position.lrn *.d
+	      game.00* log.00* book.lrn position.bin position.lrn *.d	\
+	      /cores/core.*
