--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -25,4 +25,4 @@ play: chesley
 clean :
 	rm -rf chesley a.out *.o *.dSYM *~ TAGS *.gcda a.out Saturn*	\
 	      game.00* log.00* book.lrn position.bin position.lrn *.d	\
-	      /cores/core.*
+	      /cores/core.* *.pgn
