Fix bug with castling through check detection. Add divide () debugging function. Other clean up.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -1,20 +1,19 @@
 SHELL = /bin/sh
 
-CXX = g++
+LIBS = 
+OBJS = $(subst .cpp,.o,$(SRCS))
+SRCS = $(wildcard *.cpp)
+
+CXX = g++ 
 #CXX = g++-mp-4.4
 
-CXXFLAGS = -g -Wall
-#CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops
+CXXFLAGS = -g -Wall -m64
 #CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops -DNDEBUG
-
-LIBS = 
-OBJECTS = board.o eval.o genmasks.o genmoves.o gentables.o main.o	\
- search.o session.o xboard.o test.o
 
 all: chesley
 
-chesley: $(OBJECTS)
-	$(CXX) $(CXXFLAGS) $(OBJECTS) $(LIBS) -o $@
+chesley: $(OBJS)
+	$(CXX) $(CXXFLAGS) $(OBJS) $(LIBS) -o $@
 
 play: chesley
 	xboard -debug -fcp ./chesley -size Medium
