Cleanup. Add board to ascii display function. Fix bug with castling through check when empty square is attacked by pawn.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -16,11 +16,7 @@ chesley: $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) $(LIBS) -o $@
 
 play: chesley
-	xboard -debug -fcp ./chesley -size Medium
-
-tourn: chesley
-	xboard -debug -fcp ./chesley -scp `which gnuchess` \ 
-	   matchGames 5 -size Medium
+	xboard -debug -fcp ./chesley -size Large
 
 %.o : %.cpp *.hpp
 	$(CXX) $(CXXFLAGS) -c $<
