Finish hashing implementation. Implement transposition tables. Implement MTDf.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -1,6 +1,6 @@
 SHELL = /bin/sh
 
-LIBS = 
+LIBS =
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
 
@@ -8,11 +8,12 @@ SRCS = $(wildcard *.cpp)
 CXX = g++-mp-4.4
 
 #CXXFLAGS = -g -Wall -m64
-CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops -DNDEBUG
+#CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops -DUSE_TRANS_TABLE
+CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops -DNDEBUG -DUSE_TRANS_TABLE
 
 all: chesley
 
-chesley: $(OBJS)
+chesley: $(OBJS) *.hpp
 	$(CXX) $(CXXFLAGS) $(OBJS) $(LIBS) -o $@
 
 play: chesley
@@ -20,6 +21,10 @@ play: chesley
 
 playself: chesley
 	xboard -debug -fcp ./chesley -scp ./chesley -coords -size	\
+	Medium -mode TwoMachines
+
+playold: chesley
+	xboard -debug -fcp ./chesley -scp ./chesley.old -coords -size	\
 	Medium -mode TwoMachines
 
 check: chesley
