Cleanup and debugging.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -4,7 +4,7 @@ LIBS =
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
 
-ALG = -DUSE_TRANS_TABLE=1 -DORDER_MOVES=0
+ALG = -DUSE_TRANS_TABLE=0 -DORDER_MOVES=0 -DMTDF=0
 
 #CXX = g++ 
 CXX = g++-mp-4.4
