Get MTDF working.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -3,13 +3,13 @@ SHELL = /bin/sh
 LIBS =
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
-ALG = -DUSE_TRANS_TABLE=1 -DORDER_MOVES=1 -DMTDF=1
+ALG = -DUSE_TRANS_TABLE=1 -DORDER_MOVES=1 -DMTDF=0
 
 #CXX = g++
 CXX = g++-mp-4.4
 
 #CXXFLAGS = -g -Wall -m64 $(ALG)
-CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops $(ALG)
+CXXFLAGS = -g -Wall -m64 -O3 -funroll-all-loops $(ALG) -DNDEBUG
 
 all: chesley
 
