Add svn revision number to prologue string.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -1,3 +1,8 @@
+# Makefile for the Chesley chess engine.
+#
+# Matthew Gingell
+# gingell@adacore.com
+
 SHELL = /bin/sh
 
 LIBS =
@@ -12,27 +17,37 @@ CXXFLAGS = -g -Wall -m64 -O3 $(ALG)
 
 all: chesley
 
-chesley: $(OBJS) *.hpp
+# Build the chesley binary.
+chesley: $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) $(LIBS) -o $@
 
-play: chesley
-	xboard -debug -fcp ./chesley  -coords -size Huge
+# Create the version number file from svn info.
+vsn.inc: *.hpp *.cpp
+	svn info |  \
+	sed -n 's/Revision: \([0-9]*\)/#define SVN_REVISION \"\1\"/p' > $@
 
-playself: chesley
+# Run an xboard game with chesley.
+play: chesley
+	xboard -debug -fcp ./chesley -coords -size Huge
+
+# Run an xboard game of Chesley against Chesley.
+playself: chesley 
 	xboard -debug -fcp ./chesley -scp ./chesley -coords -size	\
 	Huge -mode TwoMachines
 
+# Run an xboard game of Chesley against chesley.old.
 playold: chesley
 	xboard -debug -fcp ./chesley -scp ./chesley.old -coords -size	\
 	Huge -mode TwoMachines
 
+# Run the test suites.
 check: chesley
 	./run_tests.rb
 
-%.o : %.cpp *.hpp
+%.o : %.cpp *.hpp vsn.inc
 	$(CXX) $(CXXFLAGS) -c $<
 
 clean :
-	rm -rf chesley a.out *.o *.dSYM *~ TAGS *.gcda a.out Saturn*	\
+	rm -rf chesley *.inc a.out *.o *.dSYM *~ TAGS *.gcda a.out Saturn*	\
 	      game.00* log.00* book.lrn position.bin position.lrn *.d	\
 	      /cores/core.* *.pgn *.fen \#*\#
