Reactivate qsearch. Note we win 8-2-0 against the version without it.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -14,7 +14,7 @@ SRCS = $(wildcard *.cpp)
 # ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,
 # ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA
 
-ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE
+ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE -DENABLE_QSEARCH
 
 CXX = g++-mp-4.4
 CXXFLAGS = -g -Wall -m64 -O3 $(ALG)
