Improve null move implementation.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -15,7 +15,7 @@ SRCS = $(wildcard *.cpp)
 # ENABLE_NULL_MOVE, ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA
 
 ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
--DENABLE_QSEARCH -DENABLE_ASPIRATION_WINDOW -DENABLE_NULL_MOVE
+-DENABLE_QSEARCH -DENABLE_ASPIRATION_WINDOW # -DENABLE_NULL_MOVE
 
 LIBS =
 CXX = g++-mp-4.4
