Implement static exchange evaluation. This doesn't appear to be much help for move ordering, probably because our implementation is expensive, but it does allow us to prune losing captures in qsearch. This is a small win at low depths but apparently a significant one for very deep searches. (d > 10). --This line, and those below, will be ignored--
M    trunk/search.cpp
M    trunk/NOTES
M    trunk/search.hpp
M    trunk/Makefile
M    trunk/eval.hpp
M    trunk/board.hpp
M    trunk/genmoves.cpp

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -12,10 +12,11 @@ SRCS = $(wildcard *.cpp)
 # Turn on and off various parts of the search algorithm. Options are:
 #
 # ENABLE_ASPIRATION, ENABLE_TRANS_TABLE, ENABLE_QSEARCH,
-# ENABLE_NULL_MOVE, ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA
+# ENABLE_NULL_MOVE, ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE
 
 ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
--DENABLE_QSEARCH -DENABLE_NULL_MOVE -DENABLE_ASPIRATION_WINDOW
+-DENABLE_QSEARCH -DENABLE_NULL_MOVE -DENABLE_ASPIRATION_WINDOW		\
+-DENABLE_SEE
 
 LIBS =
 CXX = g++-mp-4.4
