--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -15,18 +15,18 @@ CXXFLAGS = -g -Wall -m64 $(OPT) $(ALG) $(INC) $(LIBS)
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
 
-########################################################################
-# Search configuration.						       #
-# 								       #
-# The following macros are used to enable and disable various parts of #
-# the tree search. Valid options are: ENABLE_ASPIRATION,	       #
-# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,		       #
-# ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE		       #
-########################################################################
+##################################################################################
+# Search configuration.						       		 #
+# 										 #
+# The following macros are used to enable and disable various parts of 		 #
+# the tree search. Valid options are: ENABLE_ASPIRATION,	       		 #
+# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,		       		 #
+# ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE		       		 #
+##################################################################################
 
 ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
--DENABLE_QSEARCH -DENABLE_NULL_MOVE -DENABLE_ASPIRATION_WINDOW		\
--DENABLE_SEE
+-DENABLE_NULL_MOVE -DENABLE_SEE -DENABLE_QSEARCH			\
+-DENABLE_ASPIRATION_WINDOW
 
 ################
 # Main binary. #
@@ -50,7 +50,7 @@ vsn.o: *.cpp *.hpp
 # Running games under xboard  #
 ###############################
 
-XBOARD_OPTS = -debug -coords -size Large -xponder -thinking
+XBOARD_OPTS = -debug -coords -size Giant -xponder -thinking
 
 # Launch an xboard session with Chesley.
 play: chesley
