Take first pass at pawn and rook evaluation. Add dump_pawns for generate data for offline analysis.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -26,7 +26,7 @@ SRCS = $(wildcard *.cpp)
 
 ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
 -DENABLE_NULL_MOVE -DENABLE_QSEARCH -DENABLE_ASPIRATION_WINDOW		\
--DENABLE_PVS # -DENABLE_SEE
+# -DENABLE_PVS -DENABLE_SEE
 
 ################
 # Main binary. #
