--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -15,21 +15,20 @@ CXXFLAGS = -g -Wall -m64 $(OPT) $(ALG) $(INC) $(LIBS)
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
 
-
 #########################################################################
-# Search configuration.						       	#
-# 									#
-# The following macros are used to enable and disable various parts of	#
-# the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,		#
-# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,			#
-# ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE, -DENABLE_PVS,	#
-# -DENABLE_LMR								#
-# 									#
+# Search configuration.                                                 #
+#                                                                       #
+# The following macros are used to enable and disable various parts of  #
+# the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,         #
+# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,                 #
+# ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE, -DENABLE_PVS,      #
+# -DENABLE_LMR, -DENABLE_KILLER                                         #
+#                                                                       #
 #########################################################################
 
 ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
--DENABLE_NULL_MOVE -DENABLE_QSEARCH -DENABLE_PVS			\
--DENABLE_ASPIRATION_WINDOW # -DENABLE_SEE # -DENABLE_LMR
+-DENABLE_NULL_MOVE -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_KILLER	\
+-DENABLE_ASPIRATION_WINDOW # -DENABLE_SEE -DENABLE_LMR
 
 ################
 # Main binary. #
