Minor cleanup and resync.

--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -22,12 +22,12 @@ SRCS = $(wildcard *.cpp)
 # the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,         #
 # ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,                 #
 # ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE, -DENABLE_PVS,      #
-# -DENABLE_LMR, -DENABLE_KILLER                                         #
+# -DENABLE_LMR                                                          #
 #                                                                       #
 #########################################################################
 
 ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
--DENABLE_NULL_MOVE -DENABLE_QSEARCH -DENABLE_KILLER -DENABLE_PVS	\
+-DENABLE_NULL_MOVE -DENABLE_QSEARCH -DENABLE_PVS			\
 -DENABLE_ASPIRATION_WINDOW # -DENABLE_LMR # -DENABLE_SEE
 
 ################
