--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -15,20 +15,19 @@ CXXFLAGS = -g -m64 -Wall $(OPT) $(ALG) $(INC) $(LIBS)
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
 
-#########################################################################
-# Search configuration.                                                 #
-#                                                                       #
-# The following macros are used to enable and disable various parts of  #
-# the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,         #
-# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE,                 #
-# ENABLE_ORDER_MOVES, ENABLE_ALPHA_BETA, ENABLE_SEE, -DENABLE_PVS,      #
-# -DENABLE_LMR                                                          #
-#                                                                       #
-#########################################################################
+########################################################################
+#                                                                      #
+# Search configuration.                                                #
+#                                                                      #
+# The following macros are used to enable and disable various parts of #
+# the tree search. Valid options are: ENABLE_ASPIRATION_WINDOW,	       #
+# ENABLE_TRANS_TABLE, ENABLE_QSEARCH, ENABLE_NULL_MOVE, ENABLE_SEE,    #
+# -DENABLE_PVS, -DENABLE_LMR					       #
+#                                                                      #
+########################################################################
 
-ALG = -DENABLE_ALPHA_BETA -DENABLE_ORDER_MOVES -DENABLE_TRANS_TABLE	\
--DENABLE_NULL_MOVE -DENABLE_QSEARCH -DENABLE_PVS			\
--DENABLE_ASPIRATION_WINDOW # -DENABLE_LMR # -DENABLE_SEE
+ALG = -DENABLE_TRANS_TABLE -DENABLE_NULL_MOVE -DENABLE_QSEARCH		\
+-DENABLE_PVS -DENABLE_ASPIRATION_WINDOW # -DENABLE_LMR # -DENABLE_SEE
 
 ################
 # Main binary. #
