--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -8,7 +8,7 @@
 SHELL = /bin/sh
 
 CXX = /opt/local/bin/g++-mp-4.4
-OPT = -O3
+OPT = -O3 -DNDEBUG
 INC = -Ideps
 LIBS =
 CXXFLAGS = -g -m64 -Wall $(OPT) $(ALG) $(INC) $(LIBS)
