--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -11,7 +11,7 @@ CXX = /opt/local/bin/g++-mp-4.4
 OPT = -O3
 INC = -Ideps
 LIBS =
-CXXFLAGS = -g -m64 -Wall $(OPT) $(ALG) $(INC) $(LIBS)
+CXXFLAGS = -g -m64 -Wall -Wextra $(OPT) $(ALG) $(INC) $(LIBS)
 OBJS = $(subst .cpp,.o,$(SRCS))
 SRCS = $(wildcard *.cpp)
 
