--- a/chesley/trunk/Makefile
+++ b/chesley/trunk/Makefile
@@ -26,8 +26,9 @@ SRCS = $(wildcard *.cpp)
 #                                                                      #
 ########################################################################
 
-ALG = -DENABLE_TRANS_TABLE -DENABLE_NULL_MOVE -DENABLE_QSEARCH		\
--DENABLE_PVS -DENABLE_ASPIRATION_WINDOW # -DENABLE_LMR # -DENABLE_SEE
+ALG = -DENABLE_QSEARCH -DENABLE_PVS -DENABLE_ASPIRATION_WINDOW	\
+-DENABLE_TRANS_TABLE -DENABLE_NULL_MOVE -DENABLE_EXTENSIONS	\
+# -DENABLE_LMR -DENABLE_SEE
 
 ################
 # Main binary. #
